tests/syntactic/string_nascii/string_nascii.dl
.type Int

.decl Fact(x:Int)

Fact("даталог").   # Non-ascii characters are not allowed

